log/build_2024-11-29_16-51-38/follow/stderr.log
  File "/home/robot/human_ws/install/follow/lib/python3.10/site-packages/follow/follow_tag.py", line 13
    s       elf.tag_coordinates_sub = Subscriber(self,
            ^^^
SyntaxError: invalid syntax

